syntax = "proto3";

package todo;

message Task {
    string title = 1;
    bool done = 2;
}

message TaskList {
    repeated Task tasks = 1;
}

message Text {
    string text = 1;
}

message Void {}

service Todo {
    rpc GetTasks(Void) returns (TaskList);
    rpc CreateTask(Text) returns (Task);
    rpc CompleteTask(Text) returns (TaskList);
    rpc GetTask(Text) returns (Task);
}